--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
         <html lang="fr">
             <meta name="description" content="Page acceuil Reservia">
             <link rel="stylesheet" href="feuille1.css"/>
+              <link rel="stylesheet" href="Media.css"/>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <script src="https://kit.fontawesome.com/2bd4782ad6.js" crossorigin="anonymous"></script>
             <title> Reservia  site </title>
