--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Page acceuil Reservia">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="Media.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -243,38 +244,51 @@
                     <div id="conteneur">
                         <h2 class="ActivityTitle">Activités à Marseille</h2>
                         <div class="box box1">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=" Vieux port">
-                                <h3>Vieux Port</h3>
+                            <a href="#" target="blank" >
+                                <div class="boxwrapimg">  
+                                <img class="boximg"  src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=" Vieux port">
+                               
+                                </div>
+                                 <h3>Vieux Port</h3>
                             </a>
                         </div>
                         <div class="box box2">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomègues">
+                            <a href="#" target="blank" >
+                                <div class="boxwrapimg">
+                                <img class="boximg" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomègues">
+                                </div>
                                 <h3>Fort de Pomègues</h3>
                             </a>
                         </div>
                         <div class="box box3">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Frioul">
+                            <a href="#" target="blank" >
+                                 <div class="boxwrapimg">  
+                                <img class="boximg" src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Frioul">
+                                </div>
                                 <h3>Îles de Frioul</h3>
                             </a>
                         </div>
                         <div class="box box4">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Calanques">
+                            <a href="#" target="blank" >
+                                 <div class="boxwrapimg">  
+                                <img class="boximg" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Calanques">
+                                </div>
                                 <h3>Parc National des Calanques</h3>
                             </a>
                         </div>
                         <div class="box box5">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="la Garde">
+                            <a href="#" target="blank" >
+                                 <div class="boxwrapimg">  
+                                <img class="boximg" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="la Garde">
+                                </div>
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </a>
                         </div>
                         <div class="box box6">
-                            <a href="href" target="blank" >
-                                <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Longchamp">
+                            <a href="#" target="blank" >
+                                 <div class="boxwrapimg">  
+                                <img class="boximg" src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Longchamp">
+                                </div>
                                 <h3>Parc Longchamp</h3>
                             </a>
                         </div>
