rectification des ancres

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <header >
                     <div class="header">
                         <img class="headerImg" src="images/logo/Reservia@3x.png" alt="Logo Reservia">
-                        <a class="Lien" href="#logements1" data-active="true">Hébergement</a>
-                        <a class="Lien2" href="#logements2" data-active="false">Activités</a>
+                        <a class="Lien" href="#accommodation" data-active="true">Hébergement</a>
+                        <a class="Lien2" href="#activity" data-active="false">Activités</a>
                         <a class="Inscription" href="#">S'inscrire</a>
                     </div>
                 </header>
@@ -93,7 +93,7 @@
 
                 <section class="section1" >
                     <div class="row">
-                        <div class="col-8" id="logements1">
+                        <div class="col-8" id="accommodation">
                             <div class="color-grey" >
                                 <h2 class="title2">Hébergements à Marseille</h2>
                                 <div class="image">
@@ -260,7 +260,7 @@
 
                 <section>
                     <div id="conteneur">
-                        <h2 class="ActivityTitle" id="logements2">Activités à Marseille</h2>
+                        <h2 class="ActivityTitle" id="activity">Activités à Marseille</h2>
                         <div class="box box1">
                             <a href="#" target="blank" >
                                 <div class="boxwrapimg">  
